HELIO-2381 - add modal window for share link that displays help text and copy to clipboard button; modify labels/titles for share link and social sharing link; update CSS to maintain proper height in the navigation bar display

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -1082,6 +1082,10 @@ footer.press {
   font-size: 1em !important;
 }
 
+.cozy-control button.button--sm.cozy-citation {
+    font-size: .9em !important;
+}
+
 .cozy-container input[type="radio"] {
   margin: 7px 7px 0 2em;
 }
