Resolves HELIO-2343: member@instiution

--- a/app/views/shared/_my_actions.html.erb
+++ b/app/views/shared/_my_actions.html.erb
@@ -2,7 +2,7 @@
   <%= render 'shared/add_content' %>
   <li class="dropdown my-actions">
     <a class="dropdown-toggle user-display-name" data-toggle="dropdown" href="#">
-      <%= current_user.user_key %>
+      <%= current_user.name %>
       <span class="caret"></span>
     </a>
 
