HELIO-2386 COUNTER4 BR2 report

--- a/app/views/counter_reports/without_customer_id/index.html.erb
+++ b/app/views/counter_reports/without_customer_id/index.html.erb
@@ -20,3 +20,7 @@
 <%= render 'counter_reports/without_customer_id/master_view/form', report_id: 'ir' %>
 <h2>Multimedia Item Requests (IR_M1)</h2>
 <%= render 'counter_reports/without_customer_id/standard_view/form', report_id: 'ir_m1' %>
+
+<h1>COUNTER 4 Report</h1>
+<h2>Book Report 2 (R2): Number of Successful Section Requests by Month and Title</h2>
+<%= render 'counter_reports/without_customer_id/standard_view/form', report_id: 'counter4_br2' %>
