add download button that displays for edit users only

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -408,6 +408,12 @@ footer.press {
       font-size: 24px;
       font-weight: 700;
       display: block;
+      padding-bottom: .2em;
+    }
+
+    .pubdate {
+      padding-right: .4em;
+      vertical-align: middle;
     }
 
     .funder {
