--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -54,14 +54,13 @@
             <% if @monograph_presenter.epub? %>
                 <a id="monograph-read-btn" href="<%= epub_path(@monograph_presenter.epub) %>" title="<%= t('monograph_catalog.index.read', title: @monograph_presenter.title) %>" aria-label="<%= t('monograph_catalog.index.read', title: @monograph_presenter.title) %>" class="btn btn-default" data-turbolinks="false"><%= t('monograph_catalog.index.read_book') %></a>
             <% end %>
-            <% if current_ability.platform_admin? %>
-                <!-- TODO: replace line 57 with 1) if EPUB or PDF rep is allow download and 2) checkpoint integration - only authorized users should see DL button -->
+            <% if @ebook_download_presenter.downloadable_ebooks? %>
                 <div class="btn-group btn-group-lg">
                   <button type="button" id="monograph-download-btn" target="_blank" title="<%= t('monograph_catalog.index.download', title: @monograph_presenter.title) %>" aria-label="<%= t('monograph_catalog.index.download', title: @monograph_presenter.title) %>" aria-haspopus="true" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><%= t('monograph_catalog.index.download_book') %> <span class="caret"></span></button>
-                  <!-- TODO: this may need to be more dynamic if coming from an array -->
                   <ul class="dropdown-menu">
-                    <li><a href="#">EPUB (size)</a></li>
-                    <li><a href="#">PDF (size)</a></li>
+                  <% @ebook_download_presenter.ebook_presenters.each do |ebook| %>
+                    <li><a href="<%= hyrax.download_path(ebook.id) %>" target="_blank"><%= ebook.ebook_format %> (<%= number_to_human_size(ebook.file_size) %>)</a></li>
+                  <% end %>
                   </ul>
                 </div>
             <% end %>
