--- a/app/views/shared/_ga.html.erb
+++ b/app/views/shared/_ga.html.erb
@@ -13,7 +13,7 @@
   <% end %>
 <% end %>
 
-<% if Rails.application.secrets.has_key? :google_analytics_id %>
+<% if Rails.application.secrets.key? :google_analytics_id %>
   <script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
