--- a/app/views/counter_reports/without_customer_id/show.html.erb
+++ b/app/views/counter_reports/without_customer_id/show.html.erb
@@ -22,12 +22,12 @@
       <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
       <td><b>Report is empty</b></td><td>&nbsp;</td>
     <% else %>
-      <% @report[:items][0].each do |k, v| %>
+      <% @report[:items][0].each do |k, _v| %>
         <td><b><%= k %></b></td>
       <% end %>
       <% @report[:items].each do |item| %>
       <tr>
-        <% item.each do |k, v| %>
+        <% item.each do |_k, v| %>
         <td><%= v %></td>
         <% end %>
       </tr>
