--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -374,7 +374,7 @@ webgl = Webgl::Unity.from_directory(UnpackService.root_path_from_noid(webgl_id, 
         cozy.control.widget.button({
           region: 'top.toolbar.left',
           template: '<button class="button--sm media" data-toggle="button" aria-label="Media">Media</button>',
-          onClick: function() { window.location = "<%= "#{main_app.monograph_catalog_url(@presenter.monograph_id) + "#media"}" %>"; }
+          onClick: function() { window.location = "<%= "#{main_app.monograph_catalog_url(@presenter.monograph_id) + '#media'}" %>"; }
         }).addTo(reader);
         <% end %>
 
