--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/skip_links' %>
 <header id="banner" role="banner">
   <hgroup>
-    <% unless press_subdomain.nil? %>
+    <% if press_subdomain.present? %>
       <%= render 'shared/brand_press_bar' %>
     <% else %>
       <%= render 'shared/brand_bar' %>
