Upgrade Hyrax 2.0.0 to Hyrax 2.4.1
Upgrade notes:

https://docs.google.com/document/d/1dPJBK3y9f9gtdEzbHM5bSwltYzwx6snJ-P-ofUQ-Zzw/edit?usp=sharing

--- a/app/views/hyrax/file_sets/edit.html.erb
+++ b/app/views/hyrax/file_sets/edit.html.erb
@@ -1,6 +1,10 @@
 <% provide :page_title, curation_concern_page_title(curation_concern) %>
 <% provide :page_header do %>
-  <h1 class="lower">Edit <%= curation_concern %></h1>
+<div class="row">
+  <div class="col-xs-12 col-sm-12">
+    <h1><span class="fa fa-edit" aria-hidden="true"></span><%= t('.header', file_set: curation_concern) %></h1>
+  </div>
+</div>
 <% end %>
 
 <div class="row">
