--- a/app/views/hyrax/file_sets/_form.html.erb
+++ b/app/views/hyrax/file_sets/_form.html.erb
@@ -1,4 +1,4 @@
-<% flash[:alert] = "This FileSet has no parent monograph. Metadata edits work but return URI errors." if parent.blank? %>
+<% flash[:alert] = "This FileSet has no parent monograph. Metadata edits work but return URI errors." if curation_concern.parent.blank? %>
 <%= simple_form_for [main_app, curation_concern],
                     html: { multipart: true },
                     wrapper_mappings: { multifile: :horizontal_file_input } do |f| %>
@@ -60,7 +60,7 @@
         (curation_concern.persisted? ? "Update Attached File" : %(Attach to #{parent.human_readable_type})),
         class: 'btn btn-primary'
       ) %>
-      <%= link_to 'Cancel', parent.present? ? parent_path(parent) : Rails.application.routes.url_helpers.hyrax_file_set_path(curation_concern.id), class: 'btn btn-link' %>
+      <%= link_to 'Cancel', curation_concern.parent.present? ? parent_path(curation_concern.parent) : Rails.application.routes.url_helpers.hyrax_file_set_path(curation_concern.id), class: 'btn btn-link' %>
     </div>
   </div>
 <% end %>
