Explain IP authentication as an option.
Most accesses to EBC and HEB are via IP authentication, not login. The text should reflect this.

--- a/app/views/counter_reports/unauthorized.html.erb
+++ b/app/views/counter_reports/unauthorized.html.erb
@@ -1,7 +1,7 @@
 <h1>Unidentified Institution</h1>
 <div class="alert alert-info alert-dismissible banner container" role="alert" style="display: none;">
-  <p class="message">Users must be logged in to view statistics for their institution.</p>
-  <p class="message">You can <a href="https://fulcrum.org/login">log in</a>,
-  or get <a href="https://www.press.umich.edu/librarians">more information</a>
+  <p class="message">To view statistics for your institution, please access this page from within your campus IP ranges, 
+    through your proxy server, or perhaps by <a href="https://fulcrum.org/login">logging in</a> to your campus identity service.</p>
+  <p><a href="https://www.press.umich.edu/librarians">more information</a>
   on purchasing the University of Michigan Press Ebook Collection.</p>
 </div>
