Added link to purchase HEB
This page will display for any user trying to access reports for any collection, so we can't tailor it to EBC specifically.

--- a/app/views/counter_reports/unauthorized.html.erb
+++ b/app/views/counter_reports/unauthorized.html.erb
@@ -2,6 +2,10 @@
 <div class="alert alert-info alert-dismissible banner container" role="alert" style="display: none;">
   <p class="message">To view statistics for your institution, please access this page from within your campus IP ranges, 
     through your proxy server, or perhaps by <a href="https://fulcrum.org/login">logging in</a> to your campus identity service.</p>
-  <p><a href="https://www.press.umich.edu/librarians">more information</a>
-  on purchasing the University of Michigan Press Ebook Collection.</p>
+  <p>If you've done so and still see this message, your institution does not have access to any collecitons on <a href="https://www.fulcrum.org">Fulcrum</a>.
+    For information on gaining access:</p>
+  <ul>
+    <li><a href="https://www.press.umich.edu/librarians">University of Michigan Press Ebook Collection</a></li>
+    <li><a href="https://www.humanitiesebook.org/subscriptions/">ACLS Humanities E-Book</a></li>
+  </ul>
 </div>
