--- a/app/views/monograph_catalog/_index_gallery_file_set_wrapper.html.erb
+++ b/app/views/monograph_catalog/_index_gallery_file_set_wrapper.html.erb
@@ -1,7 +1,11 @@
 <% fs_presenter = Hyrax::FileSetPresenter.new(document, nil, nil) %>
 <div class="document col-xs-6 col-md-3">
   <div class="thumbnail">
-    <% if fs_presenter.use_glyphicon? %>
+    <% if fs_presenter.use_riiif_for_icon? %>
+      <% icon_string = '<img src="/image-service/' + fs_presenter.id + '/full/200,/0/default.jpg' + fs_presenter&.image_cache_breaker + '" >' %>
+      <% tn = render_thumbnail_tag(document, {}, counter: document_counter_with_offset(document_counter)) %>
+      <%= tn.gsub(/<img.*>/, icon_string).html_safe %>
+    <% elsif fs_presenter.use_glyphicon? %>
       <% icon_string = '<span class="' + fs_presenter.glyphicon_type + ' file-set-glyphicon" aria-hidden="true"></span>' %>
       <% tn = render_thumbnail_tag(document, {}, counter: document_counter_with_offset(document_counter)) %>
       <%= tn.gsub(/<img.*>/, icon_string + '<br/>').html_safe %>
