--- a/fulcrum/_includes/header.html
+++ b/fulcrum/_includes/header.html
@@ -25,6 +25,7 @@
           <li><a href="mailto:{{ site.email }}">Contact</a></li>
           <li><a href="https://github.com/{{ site.github_username }}">Contribute</a></li>
           <li><a href="/accessibility/">Accessibility</a></li>
+          <li><a href="/preservation/">Preservation</a></li>
           <li><a href="/terms/">Terms of Service</a></li>
           <li><a href="/users/sign_in">Login</a></li>
         </ul>
