HELIO-2461 fix render time of _index_epub_toc.html.erb * Do not calculate CFIs for TOC members with anchor tags * Do not re-open the epub every time monograph_presenter.epub_presenter is called

--- a/app/views/monograph_catalog/_index_epub_toc.html.erb
+++ b/app/views/monograph_catalog/_index_epub_toc.html.erb
@@ -17,7 +17,7 @@
       <% end %>
       <li>
     <% end %>
-    <a class="toc-link" href="<%= epub_path(id: @monograph_presenter.epub_id, anchor: interval.cfi) %>"><%= interval.title %></a>
+    <a class="toc-link" href="<%= epub_path(id: @monograph_presenter.epub_id).gsub!(/\?.*/, '') + '#' + interval.cfi  %>"><%= interval.title %></a>
     <% if @monograph_presenter.epub_presenter.multi_rendition? %>
       <div class="btn-group download" role="group" aria-label="Read or Download Section">
         <% if interval.downloadable? %>
