Related to HELIO-2497, allow a width parameter for image-service thumbnail requests

--- a/app/views/press_catalog/_thumbnail_monograph.html.erb
+++ b/app/views/press_catalog/_thumbnail_monograph.html.erb
@@ -1,5 +1,5 @@
 <% if has_thumbnail?(document) && tn = render_thumbnail_tag(document, {}, counter: document_counter_with_offset(document_counter)) %>
   <div class="col-sm-3">
-    <a href="<%= polymorphic_path(url_for_document(document)) %>" ><img class="img-responsive" src="<%= presenter.monograph_thumbnail %>" alt="Cover image for <%= document.title.first %>"></a>
+    <a href="<%= polymorphic_path(url_for_document(document)) %>" ><img class="img-responsive" src="<%= presenter.monograph_thumbnail(225) %>" alt="Cover image for <%= document.title.first %>"></a>
   </div>
 <% end %>
