--- a/app/views/press_catalog/_index_gallery_monograph_wrapper.html.erb
+++ b/app/views/press_catalog/_index_gallery_monograph_wrapper.html.erb
@@ -2,7 +2,7 @@
 <div class="document col-xs-6 col-md-4">
   <div class="thumbnail">
     <a href="<%= polymorphic_path(url_for_document(document)) %>" data-turbolinks="false">
-      <img class="img-responsive" src="<%= presenter.monograph_thumbnail %>"
+      <img class="img-responsive" src="<%= presenter.monograph_thumbnail(145) %>"
            alt="Cover image for <%= presenter.representative_alt_text %>">
     </a>
     <div class="caption">
